--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "dependencies": {
-    "express": "^4.18.1"
-  },
   "name": "deployment-demo",
   "version": "1.0.0",
-  "main": "index.js",
-  "devDependencies": {},
+  "description": "",
+  "main": "server/index.js",
   "scripts": {
-    "start": "node server/index.js", 
+    "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+YOUR-GITHUB-URL"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "homepage": "YOUR-GITHUB-URL",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
